--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         </div>
 
         <div class="controls">
-            <button class="control-btn" onclick="previewNewYear()">🎉 预览</button>
+            <button class="control-btn" onclick="previewNewYear()">>w>wu>wu>
         </div>
     </div>
 
