--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         </div>
 
         <div class="controls">
-            <button class="control-btn" onclick="previewNewYear()">>w>wu>wu>
+             <button class="control-btn" onclick="previewNewYear()"></button>
         </div>
     </div>
 
